--- a/src/main/resources/templates/admin/common.html
+++ b/src/main/resources/templates/admin/common.html
@@ -19,7 +19,7 @@
 <!--公共nav区域-->
 <div class="navbar navbar-static-top" th:fragment="common-nav">
     <div class="navbar-inner">
-        <a class="brand" th:href="@{/admin/index}">YcBlog</a>
+        <a class="brand" th:href="@{/admin/blog/index}">YcBlog</a>
         <ul class="nav">
             <li id="menu-icon"><a class="menu-icon" href="#"><i class="icon-reorder"></i></a></li>
             <li class="dropdown">
