--- a/src/main/resources/templates/admin/blog/index.html
+++ b/src/main/resources/templates/admin/blog/index.html
@@ -21,7 +21,7 @@
                                     <a class="link" href="javascript:;" th:text="${name}">登录名</a>
                                     <span class="in">in</span>
                                     <span class="category-name">
-                                <a class="category-name" rel="tag" th:href="${'/admin/blog/category/'+${blog.articlecategoryname}}" th:utext="${blog.articlecategoryname}">分类</a>
+                                <a class="category-name" rel="tag" th:href="@{'/admin/blog/category/'+${blog.articlecategoryname}}" th:utext="${blog.articlecategoryname}">分类</a>
 							</span>
                                 </div>
                             </div>
@@ -34,14 +34,43 @@
                             <img th:src="@{~/static/admin/plugins/blog/img/item.png}" alt="">
                         </div>
                         <div class="comment count">
-                            <a href="javascript:;">评论(<th:block th:utext="${blog.articlecommentcount}"></th:block>)</a>
-                            <a href="javascript:;" class="like">点赞</a>
+                            <a href="javascript:;" th:text="'评论（'+${blog.articlecommentcount}+'）'">评论</a>
+                            <a href="javascript:;" class="like" th:text="'阅读量（'+${blog.articleviewcount}+'）'">点赞</a>
                         </div>
                     </div>
                 </th:block>
             </th:block>
             <div class="item-btn">
-                <button class="layui-btn">下一页</button>
+                <th:block th:if="${null != blogResultPage}">
+                    <ul class="am-pagination">
+                        <li th:class="${blogResultPage.currPage==1}?'disabled' : 'am-pagination-prev'"><a
+                                th:href="@{${blogResultPage.currPage==1}?'##':'/page/' + ${blogResultPage.currPage-1}}">&laquo;</a>
+                        </li>
+                        <li th:if="${blogResultPage.currPage-3 >=1}"><a
+                                th:href="@{'/page/' + ${blogResultPage.currPage-3}}"
+                                th:text="${blogResultPage.currPage -3}">1</a></li>
+                        <li th:if="${blogResultPage.currPage-2 >=1}"><a
+                                th:href="@{'/page/' + ${blogResultPage.currPage-2}}"
+                                th:text="${blogResultPage.currPage -2}">1</a></li>
+                        <li th:if="${blogResultPage.currPage-1 >=1}"><a
+                                th:href="@{'/page/' + ${blogResultPage.currPage-1}}"
+                                th:text="${blogResultPage.currPage -1}">1</a></li>
+                        <li class="active"><a href="#" th:text="${blogResultPage.currPage}">1</a></li>
+                        <li th:if="${blogResultPage.currPage+1 <=blogResultPage.totalPage}"><a
+                                th:href="@{'/page/' + ${blogResultPage.currPage+1}}"
+                                th:text="${blogResultPage.currPage +1}">1</a></li>
+                        <li th:if="${blogResultPage.currPage+2 <=blogResultPage.totalPage}"><a
+                                th:href="@{'/page/' + ${blogResultPage.currPage+2}}"
+                                th:text="${blogResultPage.currPage +2}">1</a></li>
+                        <li th:if="${blogResultPage.currPage+3 <=blogResultPage.totalPage}"><a
+                                th:href="@{'/page/' + ${blogResultPage.currPage+3}}"
+                                th:text="${blogResultPage.currPage +3}">1</a></li>
+                        <li th:class="${blogResultPage.currPage==blogResultPage.totalPage}?'disabled' : ''">
+                            <a
+                                    th:href="@{${blogResultPage.currPage==blogResultPage.totalPage}?'##' : '/page/' + ${blogResultPage.currPage+1}}">&raquo;</a>
+                        </li>
+                    </ul>
+                </th:block>
             </div>
         </div>
         <div class="sidebar-container" style="width:32%;float:right">
@@ -52,26 +81,26 @@
                             </span>
                         </div>
                         <div class="tags ">
-                            <a rel="tag" href="/tag/RESTful">RESTful(6)</a>
-                            <a rel="tag" href="/tag/优化">优化(5)</a>
-                            <a rel="tag" href="/tag/easyUI">easyUI(4)</a>
-                            <a rel="tag" href="/tag/Redis">Redis(4)</a>
-                            <a rel="tag" href="/tag/网络安全">网络安全(4)</a>
-                            <a rel="tag" href="/tag/网络攻击">网络攻击(3)</a>
-                            <a rel="tag" href="/tag/Springboot">Springboot(3)</a>
-                            <a rel="tag" href="/tag/Thymeleaf">Thymeleaf(3)</a>
-                            <a rel="tag" href="/tag/druid">druid(3)</a>
-                            <a rel="tag" href="/tag/ssm整合">ssm整合(3)</a>
-                            <a rel="tag" href="/tag/Spring">Spring(3)</a>
-                            <a rel="tag" href="/tag/SpringMVC">SpringMVC(3)</a>
-                            <a rel="tag" href="/tag/MyBatis">MyBatis(3)</a>
-                            <a rel="tag" href="/tag/单元测试">单元测试(3)</a>
-                            <a rel="tag" href="/tag/mysql">mysql(3)</a>
-                            <a rel="tag" href="/tag/大型网站技术架构">大型网站技术架构(2)</a>
-                            <a rel="tag" href="/tag/读书">读书(2)</a>
-                            <a rel="tag" href="/tag/jdbc连接池">jdbc连接池(2)</a>
-                            <a rel="tag" href="/tag/慢sql">慢sql(2)</a>
-                            <a rel="tag" href="/tag/日志">日志(2)</a>
+                            <a rel="tag" href="/tag/1">1(6)</a>
+                            <a rel="tag" href="/tag/2">2(5)</a>
+                            <a rel="tag" href="/tag/3">3(4)</a>
+                            <a rel="tag" href="/tag/4">4(4)</a>
+                            <a rel="tag" href="/tag/5">5(4)</a>
+                            <a rel="tag" href="/tag/6">6(3)</a>
+                            <a rel="tag" href="/tag/7">7(3)</a>
+                            <a rel="tag" href="/tag/8">8(3)</a>
+                            <a rel="tag" href="/tag/9">9(3)</a>
+                            <a rel="tag" href="/tag/10">10(3)</a>
+                            <a rel="tag" href="/tag/11">11(3)</a>
+                            <a rel="tag" href="/tag/12">12(3)</a>
+                            <a rel="tag" href="/tag/13">13(3)</a>
+                            <a rel="tag" href="/tag/14">14(3)</a>
+                            <a rel="tag" href="/tag/15">15(3)</a>
+                            <a rel="tag" href="/tag/16">16(2)</a>
+                            <a rel="tag" href="/tag/17">17(2)</a>
+                            <a rel="tag" href="/tag/18">18(2)</a>
+                            <a rel="tag" href="/tag/19">19(2)</a>
+                            <a rel="tag" href="/tag/20">20(2)</a>
                         </div>
             </section>
         </div>
