--- a/src/main/resources/templates/admin/blog/blogCom.html
+++ b/src/main/resources/templates/admin/blog/blogCom.html
@@ -13,7 +13,7 @@
 <div class="header" th:fragment="common-header">
     <div class="header-wrap">
         <h1 class="logo pull-left">
-            <a href="index.html">
+            <a th:href="@{/admin/index}">
                 <img th:src="@{~/static/admin/plugins/blog/img/logo.png}" alt="" class="logo-img">
                 <span style="color:#fff">哈哈</span>
             </a>
@@ -28,7 +28,7 @@
         </form>
         <div class="blog-nav pull-right">
             <ul class="layui-nav pull-left">
-                <li class="layui-nav-item layui-this"><a href="index.html">首页</a></li>
+                <li class="layui-nav-item layui-this"><a th:href="@{/admin/blog/index}">首页</a></li>
                 <li class="layui-nav-item"><a href="message.html">留言</a></li>
                 <li class="layui-nav-item"><a href="about.html">关于</a></li>
             </ul>
@@ -43,7 +43,7 @@
         </div>
     </div>
     <ul class="pop-nav" id="pop-nav" >
-        <li><a href="index.html">首页</a></li>
+        <li><a th:href="@{/admin/blog/index}">首页</a></li>
         <li><a href="message.html">留言</a></li>
         <li><a href="about.html">关于</a></li>
     </ul>
