--- a/src/main/resources/templates/admin/blog/index.html
+++ b/src/main/resources/templates/admin/blog/index.html
@@ -25,7 +25,9 @@
 							</span>
                                 </div>
                             </div>
-                            <h3><a href="details.html" th:text="${blog.articletitle}">文章标题</a></h3>
+                            <h3><a th:href="@{'/admin/blog/article/'+${blog.oid}}">
+                                <th:block th:text="${blog.articletitle}"></th:block>
+                                文章标题</a></h3>
                             <h5>发布于：<span th:text="${#dates.format(blog.articlecreated,'yyyy-MM-dd HH:mm:ss')}">发布时间</span></h5>
                             <p>
                                 <th:block th:utext="${#strings.abbreviate(blog.articlecontent,150)}">
@@ -34,7 +36,7 @@
                             <img th:src="@{~/static/admin/plugins/blog/img/item.png}" alt="">
                         </div>
                         <div class="comment count">
-                            <a href="javascript:;" th:text="'评论（'+${blog.articlecommentcount}+'）'">评论</a>
+                            <a  href="javascript:;" th:text="'评论（'+${blog.articlecommentcount}+'）'">评论</a>
                             <a href="javascript:;" class="like" th:text="'阅读量（'+${blog.articleviewcount}+'）'">点赞</a>
                         </div>
                     </div>
@@ -83,7 +85,7 @@
                     </div>
                     <div class="tags ">
                         <th:block th:each="hotTag : ${hotTagList}">
-                            <a rel="tag" th:href="@{'/admin/blog/tag/'+${hotTag.tagOId}}"
+                            <a rel="tag" th:href="@{'/admin/blog/tag/'+${hotTag.tagTitle}}"
                                th:utext="${hotTag.tagTitle}+'（'+${hotTag.tagCount}+'）'">标签（数量）</a>
                         </th:block>
                     </div>
