--- a/src/main/resources/templates/admin/blog/blog-detail.html
+++ b/src/main/resources/templates/admin/blog/blog-detail.html
@@ -32,7 +32,7 @@
             <a name="comment"> </a>
             <div class="comt layui-clear">
                 <a href="javascript:;" class="pull-left">评论</a>
-                <a href="comment.html" class="pull-right">写评论</a>
+                <a th:href="@{'/admin/blog/comment/'+${blogVO.oid}}" class="pull-right">写评论</a>
             </div>
             <div id="LAY-msg-box">
                 <div class="info-item">
@@ -61,6 +61,7 @@
 </div>
 <div th:replace="admin/blog/blogCom::common-footer"></div>
 <script th:src="@{~/static/admin/plugins/blog/js/layui.js}"></script>
+<script th:src="@{~/static/admin/plugins/jquery/js/jquery.min.js}"></script>
 <script>
     layui.config({
         base: '/static/admin/plugins/blog/js/'
