--- a/src/main/resources/templates/admin/blog/index.html
+++ b/src/main/resources/templates/admin/blog/index.html
@@ -129,6 +129,7 @@
 </div>
 <div th:replace="admin/blog/blogCom::common-footer"></div>
 <script th:src="@{~/static/admin/plugins/blog/js/layui.js}"></script>
+<script th:src="@{~/static/admin/plugins/jquery/js/jquery.min.js}"></script>
 <script>
     layui.config({
         base: '/static/admin/plugins/blog/js/'
