--- a/src/main/resources/templates/admin/blog/blog-detail.html
+++ b/src/main/resources/templates/admin/blog/blog-detail.html
@@ -35,26 +35,20 @@
                 <a th:href="@{'/admin/blog/comment/'+${blogVO.oid}}" class="pull-right">写评论</a>
             </div>
             <div id="LAY-msg-box">
-                <div class="info-item">
-                    <img class="info-img" src="../res/static/images/info-img.png" alt="">
-                    <div class="info-text">
-                        <p class="title count">
-                            <span class="name">一片空白</span>
-                            <span class="info-img like"><i class="layui-icon layui-icon-praise"></i>5.8万</span>
-                        </p>
-                        <p class="info-intr">父爱如山，不善表达。回想十多年前，总记得父亲有个宽厚的肩膀，小小的自己跨坐在上面，越过人山人海去看更广阔的天空，那个时候期望自己有一双翅膀，能够像鸟儿一样飞得高，看得远。虽然父亲有时会和自己开玩笑，但在做错事的时候会受到严厉的训斥。父亲有双粗糙的大手掌。</p>
-                    </div>
-                </div>
-                <div class="info-item">
-                    <img class="info-img" src="../res/static/images/info-img.png" alt="">
-                    <div class="info-text">
-                        <p class="title count">
-                            <span class="name">一片空白</span>
-                            <span class="info-img like"><i class="layui-icon layui-icon-praise"></i>5.8万</span>
-                        </p>
-                        <p class="info-intr">父爱如山，不善表达。回想十多年前，总记得父亲有个宽厚的肩膀，小小的自己跨坐在上面，越过人山人海去看更广阔的天空，那个时候期望自己有一双翅膀，能够像鸟儿一样飞得高，看得远。虽然父亲有时会和自己开玩笑，但在做错事的时候会受到严厉的训斥。父亲有双粗糙的大手掌。</p>
-                    </div>
-                </div>
+                <th:block th:unless="${#lists.isEmpty(blogVO.comments)}">
+                    <th:block th:each="comment : ${blogVO.comments}">
+                        <div class="info-item">
+                            <img class="info-img" th:src="@{~/static/admin/plugins/blog/img/person.png}" alt="">
+                            <div class="info-text">
+                                <p class="title count">
+                                    <span class="name"><th:block th:text="${name}"></th:block></span>
+                                    <span class="info-img like"><i class="layui-icon layui-icon-praise"></i>100+</span>
+                                </p>
+                                <p class="info-intr"><th:block th:text="${comment.commentcontent}"></th:block></p>
+                            </div>
+                        </div>
+                    </th:block>
+                </th:block>
             </div>
         </div>
     </div>
