--- a/src/main/resources/templates/admin/blog/blogCom.html
+++ b/src/main/resources/templates/admin/blog/blogCom.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" th:href="@{~/static/admin/plugins/blog/css/layui.css}">
     <link rel="stylesheet" th:href="@{~/static/admin/plugins/blog/css/mian.css}">
+    <link rel="stylesheet" th:href="@{~/static/admin/plugins/sweetalert/css/sweetalert.css}">
 </head>
 <!--div head区域-->
 <div class="header" th:fragment="common-header">
