--- a/src/main/resources/templates/admin/blog/blog-comment.html
+++ b/src/main/resources/templates/admin/blog/blog-comment.html
@@ -25,7 +25,11 @@
                     <img src="../res/static/images/item.png" alt="">
                     <div class="count layui-clear">
                         <span class="pull-left">阅读 <em><th:block th:text="${blogVO.articleviewcount}"></th:block></em></span>
+                        <span class="pull-right ">评论 <em><th:block th:text="${blogVO.articlecommentcount}"></th:block></em></span>
+<!--
                         <span class="pull-right like">评论 <em><th:block th:text="${blogVO.articlecommentcount}"></th:block></em></span>
+-->
+
                     </div>
                 </div>
             </div>
